# rt-ml-multicloud-platform

./: .env.example  .gitattributes  .gitignore  .trivyignore  LICENSE  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  generate_dashboards.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  destroy-demo.yml  release.yml  security.yml  training.yml
configs/: development.yaml  production.yaml  validation.yml
configs/api/: base.yaml  middleware.yaml  model_serving.yaml  uvicorn.yaml
configs/beam/: base.yaml  feature_transforms.yaml  pipeline_options.yaml
configs/mlflow/: base.yaml  model_deployment.yaml  tracking.yaml
configs/models/: fraud_detector.yaml
configs/monitoring/: alerts.yaml  base.yaml  metrics.yaml
data/sample/: README.md
data/sample/demo/: config.env  demo.env
data/sample/demo/datasets/: fraud_detection.csv  transactions.csv  users.csv
data/sample/demo/events/: demo_events.jsonl
data/sample/demo/expected/: baseline_prediction_expected.json  improved_prediction_expected.json
data/sample/demo/features/: baseline_features.json  improved_features.json
data/sample/demo/predictions/: baseline_prediction_output.json  improved_prediction_output.json
docker/: Dockerfile  beam.Dockerfile  minio-entrypoint.sh
docker/mlflow/: Dockerfile
docs/: README.md  demo.md  deployment.md  project_structure.md
docs/api/: reference.md
docs/architecture/: components.md  data_flow.md  overview.md
docs/configs/: CONFIGURATION.md  configuration-strategy.md
docs/design/: feature-store-bulk-upsert-optimization.md
docs/guides/: aws-ec2-k3s-deployment.md  aws-eks-deployment.md  demo.md  demo_aws.md  demo_infrastructure.md  demo_local.md  demo_local_k8s.md  deployment-guide.md  deployment.md  development.md  live-configuration-patching.md  setup.md  testing-workflow.md
docs/guides/model/: training.md
docs/model/: model-mgt-strategy.md
docs/modules/: feature_engineering.md  feature_store.md  ingestion.md  models.md  monitoring.md
docs/monitoring/: QUICK_START.md  grafana-dashboards.md  prometheus-monitoring.md
docs/pipeline/: apache-beam-kinesis-to-s3.md  data-pipeline-execution-plan.md  data-workflow-examples.md  kds-apache-beam-deployment.md  kinesis-beam-runners.md
docs/terraform/: aws-guide.md  remote-state.md
envs/: .env.example  README.md
infrastructure/docker/: api.Dockerfile  mlflow.Dockerfile
k8s/base/: configmap.yaml  kustomization.yaml  mlflow.yaml  namespace.yaml  redis.yaml
k8s/overlays/production/: api-production.yaml  configmap-production.yaml  kustomization.yaml
model_artifacts/fraud_detector/: features.txt  metadata.json
monitoring/prometheus/: prometheus.yml
notebooks/: data_exploration.ipynb  model_training_analysis.ipynb  performance_monitoring.ipynb
ops/docker/api/: Dockerfile
ops/docker/base/: Dockerfile
ops/docker/beam/: Dockerfile
ops/docker/mlflow/: Dockerfile
ops/envs/: .env.example
ops/k8s/base/: api.yaml  configmap.yaml  evaluation-job.yaml  exporters.yaml  kustomization.yaml  mlflow.yaml  monitoring.yaml  postgres.yaml  secret.yaml  training-job.yaml
ops/local/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
ops/monitoring/prometheus/: prometheus-local.yml  prometheus.yml
ops/terraform/: README.md
ops/terraform/aws/: README.md  REMOTE_STATE_GUIDE.md
sample_data/: README.md
sample_data/configs/: staging.yaml
sample_data/demo/requests/: baseline.json  improved.json
sample_data/small/: sample_transactions.json  sample_user_features.json
scripts/: generate_cache_traffic.sh  setup.sh  test_prometheus_queries.sh
scripts/bootstrap/: aws-setup.sh  gcp-setup.sh
scripts/data_generation/: generate_cache_traffic.sh  generate_monitoring_traffic.sh  publish_kinesis_events.py
scripts/demo/: demo.sh  generate_data.py  health-check.sh  load_sample_data.py  test_local_k8s_train.py  train_model.py  verify_demo.py
scripts/demo/demo-aws/: demo-aws.md  generate_demo_events.py  ingest_kinesis_s3.py  load-test.sh  reset-demo.sh  train.py  trigger-ingestion.sh  trigger-training.sh
scripts/demo/demo-local/: demo-local.md  demo-local.sh  generate_data.py
scripts/demo/demo-local-k8s/: demo-local-k8s.md  train.py
scripts/demo/local-demo/: demo.sh  generate_data.py
scripts/demo/local-demo-k8s/: train.py
scripts/demo/utilities/: cleanup_all.py  cleanup_models.py  compare_models.py  generate_dashboards.py  generate_prom_configs.py  list_features.py  list_models.py  load_sample_data.py  model_utils.sh  quick_train_model.py  train_docker.sh  update_manifests.py
scripts/deployment/aws/: install_k3s.sh  provision_spot_demo.sh  setup_production_eks.sh
scripts/deployment/gcp/: setup_production_gke.sh
scripts/setup/: install.sh
scripts/testing/: test_local_k8s.sh  test_prometheus_queries.sh
src/: __init__.py
src/api/: __init__.py  fast_model_loader.py  main.py  model_updater.py  schemas.py  simple_predict.py
src/database/: __init__.py  models.py  session.py
src/feature_engineering/: __init__.py  assemble_training_data.py  labeling.py  prepare_training_data.py  transforms.py
src/feature_engineering/beam/: __init__.py  __main__.py  pipelines.py  transforms.py
src/feature_store/: __init__.py  client.py  store.py  transforms.py
src/ingestion/: __init__.py  base.py
src/ingestion/kafka/: __init__.py  consumer.py
src/ingestion/kinesis/: __init__.py  consumer.py
src/ingestion/pubsub/: __init__.py  consumer.py
src/models/: __init__.py  model_definition.py
src/models/evaluation/: evaluate_and_promote.py
src/models/training/: __init__.py  train.py  trainer.py
src/monitoring/: __init__.py  alerts.py  health.py  metrics.py
src/utils/: config.py  logging.py
tests/: __init__.py  conftest.py
tests/contract/: test_api_schema.py
tests/integration/: test_api_integration.py  test_feature_store_integration.py
tests/performance/: test_latency.py
tests/unit/: test_database.py  test_feature_engineering.py  test_feature_store.py  test_monitoring.py  test_utils.py
(+48 files in other folders)
