[tool.poetry]
name = "rt-ml-multicloud-platform"
version = "1.0.0"
description = "Real-time ML pipeline with multi-cloud streaming processing"
authors = ["Italo Pinheiro <italo@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core ML and Data Science
mlflow = "^3.4.0"  # Latest MLflow version that may support numpy 2.x
scikit-learn = "^1.5.0"  # scikit-learn 1.5+ supports numpy 2.x
# xgboost = "^2.0.0"  # Optional - comment out for initial setup
# lightgbm = "^4.3.0"  # Optional - comment out for initial setup
# tensorflow = "^2.15.0"  # Heavy dependency - comment out
# torch = "^2.2.0"  # Heavy dependency - comment out

# Streaming and Processing
boto3 = "^1.34.0"



# API and Web Framework
fastapi = "^0.115.0"  # Updated for MLflow 3.4.0 compatibility
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
httpx = "^0.28.0"  # Updated for MLflow 3.4.0 compatibility

# Data Processing
pandas = "^2.2.0"  # pandas 2.2+ supports numpy 2.x
numpy = "^2.0.0"  # Use numpy 2.x for Python 3.13
# pyarrow = "^15.0.0"  # Optional
# polars = "^0.20.0"  # Optional

# Monitoring and Observability
prometheus-client = "^0.19.0"
# opentelemetry-api = "^1.22.0"  # Optional
# opentelemetry-instrumentation-fastapi = "^0.43b0"  # Optional

# Cloud SDKs
# google-cloud-bigquery = "^3.14.0"  # Not needed for demo
# google-cloud-storage = "^2.13.0"  # Not needed for demo
# google-cloud-aiplatform = "^1.40.0"  # Not needed for demo
# sagemaker = "^2.203.0"  # Not needed for demo

# Storage and Caching
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"  # Added for MLflow backend
joblib = "^1.3.0"  # Added for model serialization

# Utilities
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
tenacity = "^8.2.3"
croniter = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
locust = "^2.20.0"
notebook = "^7.0.0"
fakeredis = "^2.31.3"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
factory-boy = "^3.3.0"

[tool.poetry.group.processing.dependencies]
apache-beam = {extras = ["gcp", "aws"], version = "^2.53.0"}
confluent-kafka = "^2.3.0"
google-cloud-pubsub = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow running",
]